# Larva

./: .gitignore  CNAME  README.md  RUNTHIS.ipynb  app.py  pyproject.toml  sandbox.py  script.js  terminal_output.ansi  terminal_output.txt
3D_data_handler/: __init__.py  dwg_viewer.py  slicer.py  stl_slicer.py  stl_viewer.py  viewer.py
Larva/: __init__.py  data_handler.py  direct_data_handler.py  read_terminal.py  tools.py
data/: Cube2.stl  Play_Brick_3mm.STL  USBケース v0.stl  tiefighter.stl
data/dwg/: autocad_square.dwg  autocad_square2.dxf  complex_hollow_cube.dwg  cube.dwg  hollow_cube.dwg  plane.dwg
data/stl/: cube_with_hole_inside.stl  hollow_cube.stl  sponge.stl  test_subject.stl
data/stl/complex_stl/: rhombic.stl  thankyou_for_listening.stl
data_handler/: __init__.py  main.py  playground2.py  playground_test.py  sandbox.py  sandbox2.py  sandbox3.py  tools.py
docs/: index.html  style.css
for_presentation/: inside_of_stl_files.py  make_shapes.py
output/: output_slice_x0.dwg  output_slice_y0.dwg  output_slice_z0.dwg
sandbox/: box.py  box2.py  playground.py  playground2.py
static_site/: index.html
step_converter/: __init__.py
tests/: __init__.py  playground_test.py  test_playground.py  test_playground2.py
